[gd_scene load_steps=13 format=3 uid="uid://cwh746c3h186p"]

[ext_resource type="Script" uid="uid://wox80da5j3bc" path="res://scipts/machine_scripts/combiner_script.gd" id="1_4u47f"]
[ext_resource type="Script" uid="uid://753h7sdkrada" path="res://scipts/machine_scripts/acceptor_scripts/shell_acceptor.gd" id="2_fmhbr"]
[ext_resource type="Script" uid="uid://bkk6hdxlip85e" path="res://scipts/machine_scripts/acceptor_scripts/chain_acceptor.gd" id="3_umbwf"]
[ext_resource type="Script" uid="uid://cil44rtaoxmqp" path="res://scipts/machine_scripts/acceptor_scripts/pointer_acceptor.gd" id="4_ghmsf"]
[ext_resource type="Script" uid="uid://cjxlkqh1u77lt" path="res://scipts/machine_scripts/acceptor_scripts/null_acceptor.gd" id="5_ghmsf"]
[ext_resource type="Texture2D" uid="uid://bv2j2iinmpjxq" path="res://sprites/interactables/conveyor_belt.png" id="5_umbwf"]
[ext_resource type="Texture2D" uid="uid://foxqrrrid4e8" path="res://sprites/interactables/assembler_conveyor.png" id="6_ghmsf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j7a5e"]
size = Vector2(32, 124)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y63fp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u605p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ern1i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_irnnw"]

[node name="Combiner" type="StaticBody2D"]
script = ExtResource("1_4u47f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 14)
shape = SubResource("RectangleShape2D_j7a5e")

[node name="Shell_area" type="Area2D" parent="."]
script = ExtResource("2_fmhbr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shell_area"]
position = Vector2(-26, -34)
shape = SubResource("RectangleShape2D_y63fp")

[node name="Chain_area" type="Area2D" parent="."]
script = ExtResource("3_umbwf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chain_area"]
position = Vector2(-26, -3)
shape = SubResource("RectangleShape2D_u605p")

[node name="Pointer_area" type="Area2D" parent="."]
script = ExtResource("4_ghmsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pointer_area"]
position = Vector2(-27, 23)
shape = SubResource("RectangleShape2D_ern1i")

[node name="Finished_position" type="Marker2D" parent="."]
position = Vector2(-29, 59)

[node name="Pickup_area" type="Area2D" parent="."]
script = ExtResource("5_ghmsf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup_area"]
position = Vector2(-28, 59)
shape = SubResource("RectangleShape2D_irnnw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_umbwf")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(1, 58)
texture = ExtResource("6_ghmsf")
